# cuttledoc-rs

./: .gitattributes  .gitignore  PLAN.md  README.md  deny.toml
.github/workflows/: benchmark-data.yml  dependency-policy.yml  node-api-spike.yml
benchmarks/: README.md
benchmarks/analysis/: phase0.audiobook-pilot-1.errors.json  phase0.multilingual-fleurs-10-1.errors.json
benchmarks/assets/: LICENSE.md  README.md
benchmarks/controls/: opus-codec-qwen3-tts-de-1.json
benchmarks/fixtures/: audiobook-pilot.json  manifest.json  source-candidates.json  synthetic-roundtrip-plan.json  synthetic-roundtrip-selection.json  target-domain-corpus.json  target-domain-plan.json
benchmarks/matrices/: phase0.audiobook-pilot-1.json  phase0.multilingual-fleurs-10-1.json
benchmarks/oracles/: qwen3-asr-0.6b.audiobook-en-2277-149874-0000.decoder-en.json  qwen3-asr-0.6b.audiobook-en-2277-149874-0000.encoder.json  qwen3-asr-0.6b.audiobook-en-2277-149874-0000.prompt-en.json  voxtral-realtime.audiobook-de-135_82_000105.decoder-480ms.json  voxtral-realtime.audiobook-de-135_82_000105.encoder-480ms.json  voxtral-realtime.audiobook-de-135_82_000105.frontend-480ms.json
benchmarks/postprocessing/: cuttledoc-v2-snapshot.json  factorial-cells.json  factorial-plan.json  hosted-llm-pragmatic-extension-decision.json  hosted-llm-pragmatic-extension-estimate.json  hosted-llm-pragmatic-extension-plan.json  hosted-llm-pragmatic-extension-results.json  hosted-llm-pragmatic-extension-screen.json  hosted-llm-pragmatic-extension-semantic-review.json  hosted-llm-target-complete-calibration.json  hosted-llm-target-complete-decision.json  hosted-llm-target-complete-estimate.json  hosted-llm-target-complete-plan.json  hosted-llm-target-complete-results.json  hosted-llm-target-complete-screen.json  hosted-llm-target-complete-semantic-review.json  local-llm-gemma-contract-results.json  local-llm-gemma-contract-screen.json  local-llm-gemma-target-ab-plan.json  local-llm-gemma-target-ab-results.json  local-llm-gemma-target-complete-results.json  local-llm-gemma-target-complete-screen.json  local-llm-gemma-target-patches-results.json  local-llm-gemma-target-patches-screen.json  local-llm-screen.json
benchmarks/rights/: die-wissensarchitektinnen-s01e01.json  die-wissensarchitektinnen-s01e02.json  die-wissensarchitektinnen-s01e04.json  gigaspeech.json  hui-audio-corpus-german.json  merkel-podcast-corpus.json  vorleser-net.json
benchmarks/runs/: apple-speech.fleurs-en-000.json  apple-speech.partial.json  canary-1b-flash.runtime-evaluation.json  canary-1b-v2.runtime-evaluation.json  canary-qwen-2.5b.runtime-evaluation.json  mlx-asr.blocked.json  mlx-whisper-e2e.fleurs-en-000.json  mlx-whisper-encoder.fleurs-en-000.json  nemotron-3.5-asr-streaming-0.6b.runtime-evaluation.json  parakeet-coreml.blocked.json  parakeet-coreml.fleurs-en-000.json  qwen3-asr-1.7b.runtime-evaluation.json  voxtral-c-mps-control.runtime-evaluation.json  voxtral-mini-3b-2507.runtime-evaluation.json  voxtral-mini-4b-realtime-2602.runtime-evaluation.json  whisper-coreml-whispercpp.blocked.json  whisper-coreml-whispercpp.fleurs-en-000.json
benchmarks/schema/: audiobook-pilot.schema.json  error-analysis.schema.json  fixture-manifest.schema.json  matrix.schema.json  postprocessing-factorial-cells.schema.json  postprocessing-factorial-local-audio.schema.json  postprocessing-factorial-local-qualification.schema.json  postprocessing-factorial-local-slice.schema.json  postprocessing-factorial-local-state.schema.json  postprocessing-factorial-local-stt.schema.json  postprocessing-factorial-plan.schema.json  run.schema.json  (+13 more)
docs/: apple-runtime-evaluation.md  architecture.md  asr-benchmark-design.md  audio-use-cases.md  compatibility-matrix.md  dependency-allowlist.txt  dependency-policy.md  exploratory-asr-candidates.md  migration-inventory.md  model-evaluation.md  postprocessing-evaluation.md  postprocessing-factorial-benchmark.md  postprocessing-long-form-evaluation.md  postprocessing-prompt-evaluation.md  public-api.md  source-rights-review.md  speech-engine-shortlist-2026-07.md  synthetic-roundtrip-benchmark.md  target-domain-gold-review.md  text-generation-runtime-evaluation.md  transcript-enhancement-model-bakeoff.md
scripts/: analyze-asr-errors.mjs  archive-qwen-tts-calibration.mjs  capture-huggingface-model-metadata.mjs  capture-qwen3-mlx-lifecycle.mjs  check-dependency-policy.sh  encode-benchmark-opus.mjs  fetch-audiobook-pilot.mjs  fetch-mlx-whisper-encoder-model.sh  fetch-mlx-whisper-model.sh  fetch-parakeet-baseline-models.mjs  fetch-qwen3-tts-mlx-model.sh  fetch-text-generation-mlx-model.sh  fetch-tts-calibration-model.sh  fetch-voxtral-c-mps-model.sh  fetch-voxtral-realtime-mlx-model.sh  fetch-voxtral-tts-mlx-bf16-model.sh  fetch-voxtral-tts-mlx-model.sh  fetch-whisper-baseline-models.mjs  generate-postprocessing-factorial-matrix.mjs  import-asr-aggregate.mjs  import-target-domain-source.mjs  materialize-postprocessing-long-form-fixture.mjs  materialize-synthetic-roundtrip.mjs  materialize-target-domain-corpus.mjs  prepare-target-domain-review.mjs  run-apple-speech-spike.sh  run-apple-tts-spike.sh  run-legacy-asr-baseline.mjs  run-mlx-direct-spike.sh  run-node-api-spike.sh  run-phase0-asr-matrix.mjs  run-postprocessing-factorial-hosted-llm.mjs  run-postprocessing-factorial-local-llm.mjs  run-postprocessing-factorial-local.mjs  run-qwen3-tts-mlx-reference.sh  run-qwen3-tts-voicedesign-calibration.sh  run-target-domain-asr.mjs  run-text-generation-mlx-reference.sh  run-tts-calibration-asr.mjs  run-voxtral-c-mps-control.sh  (+22 more)
spikes/coreml-rust/: Cargo.toml  README.md
spikes/coreml-rust/src/: main.rs
spikes/mlx-direct/: CMakeLists.txt  README.md
spikes/mlx-direct/Sources/: CuttledocMlxShim.cpp  CuttledocMlxTransformer.cpp
spikes/mlx-direct/include/: cuttledoc_mlx_shim.h  cuttledoc_mlx_transformer.h
spikes/mlx-direct/rust/: main.rs
spikes/node-api/native/: Cargo.toml
spikes/node-api/native/src/: lib.rs
spikes/voxtral-tts-mlx-reference/: README.md  model-manifest.json  model-manifest.schema.json  pyproject.toml  run_reference.py
(+339 files in other folders)
