[package]
name = "cuttledoc-node-spike"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.10.3", features = ["napi8"] }
napi-derive = "=3.5.9"

[build-dependencies]
napi-build = "=2.3.2"

[lints.rust]
unsafe_code = "deny"
